--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,3 +14,7 @@ body {
 html, body{
   overflow-x: hidden;
 }
+
+body{
+  overflow-x: hidden;
+}
